[Refactoring] 응답객체 통일
